syntax = "proto2";

package lisk;

option go_package = "types";

message AssetMessage {
  required uint64 amount = 1;
  required bytes recipientAddress = 2;
  required string data = 3;
}
